# CBBmix

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/CBBmix/: __init__.py  germline.py  mixture.py  params.py  somatic.py  utils.py  vcf.py
tests/: test_germline.py  test_mixture.py  test_params.py  test_somatic.py  test_utils.py  test_vcf.py
